# anneal

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  IMPACT_TRAVERSAL_SPEC.md  README.md  deny.toml  flake.nix  install.sh  justfile
.beads/: config.yaml  metadata.json
.design/: 2026-04-02-cli-output-audit.md  2026-04-02-progressive-disclosure-output-spec.md  2026-04-02-query-explain-spec.md  2026-04-08-code-review.md  2026-04-08-impact-traversal-config.md  2026-04-15-areas-orient-garden.md  2026-04-15-cli-ux-audit.md  2026-04-17-cli-ux-audit-v2.md  2026-04-21-orient-frontier-foundation.md  2026-04-30-agent-ergonomics-retrieval-layer.md  2026-05-03-language-redesign.md  2026-05-07-engine-spike-and-parity-protocol.md  2026-05-13-ascent-unsafe-audit.md  2026-05-13-corpus-runtime.md  2026-05-13-engine-spike-results.md  2026-05-13-primitives-first-corpus-vm.md  2026-05-16-design-review.md  2026-05-16-help-reference-spec.md  2026-05-19-compatibility-surface-retire-audit.md  2026-05-20-datalog-learning-path.md  2026-05-20-flag-audit.md  2026-05-21-code-mode-ergonomics.md  2026-05-21-multi-arg-ergonomics.md  2026-05-25-reduction-audit.md  2026-05-26-remove-focused-command-surface-audit.md  2026-05-26-surface-evolution-framework.md  2026-05-28-phase0-handle-kind-consolidation.md  2026-05-28-v014-calibration-design.md  2026-05-28-v014-shape-proposal.md  2026-05-28-v015-retrieval-design.md  2026-05-30-code-as-corpus-spike.md  2026-06-01-perf-architecture-arc.md  2026-06-01-spec-code-coherence.md  2026-06-02-allocation-study.md  2026-06-02-goal-less-orientation.md  2026-06-02-ordered-query-output.md  2026-06-02-pass-contracts.md  2026-06-04-plan-ir-reconciliation.md  2026-06-04-post-arc-profile.md  2026-06-04-runtime-architecture.md  (+22 more)
.design/evidence/: 2026-07-15-search-ranker-ablation.md
.design/evidence/903i/: self-corpus-rows.csv  self-corpus-rows.jsonl  self-corpus-summary.md
.design/evidence/bqqc/: regex-rustdoc-sim.json
.design/evidence/dogfood/: 2026-07-05-herald-joint-graph.md
.design/feedback/: 2026-04-15-claude-herald-feedback.md  2026-04-15-claude-host-corpus-feedback.md
.design/reviews/: 2026-06-01-simplify-codex-codebase-review.md  2026-06-06-kftp-slices-2-5-code-review.md
.fixtures/: dynamic-ir-bench-2026-05-13-sample.json  parity-2026-05-13-sample.json
.fixtures/checks-catalog/: expected-diagnostics.json  facts.json
.fixtures/sample-corpus/: .snapshot-provenance.json  LABELS.md  OPEN-QUESTIONS.md  README.md  anneal.dl
.fixtures/sample-corpus/archive/: 2026-03-05-radio-log-pilot.md  2026-03-12-crate-card-retrospective.md
.fixtures/sample-corpus/formal-model/: v14.md  v15.md  v16.md  v17.md
.fixtures/sample-corpus/implementation/: 2026-04-28-v17-import-plan.md
.fixtures/sample-corpus/operations/: field-rollout-plan.md
.fixtures/sample-corpus/reference/: checklist.md  glossary.md
.fixtures/sample-corpus/research-log/: 2026-04-20-offline-reconciliation.md
.fixtures/sample-corpus/reviews/: 2026-05-02-field-readiness-review.md  (+2 more)
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  V2_BUILD_SCOPE.md  config.json
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
crates/anneal-cli/: Cargo.toml
crates/anneal-cli/src/: app.rs  context.rs  lib.rs  save.rs
crates/anneal-cli/tests/: cold_start_honesty.rs
crates/anneal-code/: Cargo.toml
crates/anneal-code/src/: classify.rs  config.rs  eep48.rs  emit.rs  lib.rs  rustdoc.rs  tests.rs  vocab.rs
crates/anneal-core/: Cargo.toml
crates/anneal-core/src/: config_schema.rs  driver.rs  facts.rs  hash.rs  history.rs  ids.rs  lib.rs  lifecycle.rs  metadata.rs  path_policy.rs  policy.rs  project.rs  ranking.rs  ranking_benchmark.rs  retrieval.rs  runtime_config.rs  source.rs  store.rs  target_probe.rs  time.rs  trail.rs  verbs.rs  visibility.rs
crates/anneal-core/src/ir/: ids.rs  interner.rs  mod.rs  plan.rs  schema.rs
crates/anneal-core/src/prelude/: checks.dl  convergence.dl  dimensions.dl  graph.dl  orientation.dl  ranking.dl  topic.dl  views.dl
crates/anneal-core/src/runtime/: analysis.rs  ast.rs  eval.rs  evaluator.rs  introspection.rs  loader.rs  mod.rs  ndjson.rs  parser.rs  prelude.rs  primitives.rs  schedule.rs
crates/anneal-core/src/runtime/prelude/: views.dl
crates/anneal-core/src/vm/: execute.rs  fixpoint.rs  frame.rs  mod.rs  provenance.rs  store.rs  value.rs  view.rs
crates/anneal-lang/: Cargo.toml
crates/anneal-lang/src/: ast.rs  lib.rs  loader.rs  parser.rs
crates/anneal-legacy/: Cargo.toml
crates/anneal-mcp/: Cargo.toml
crates/anneal-md/: Cargo.toml
crates/anneal-md/src/: lib.rs
crates/anneal-md/src/extract/: adapter.rs  area.rs  body_scan.rs  config.rs  extraction.rs  graph.rs  handle.rs  mod.rs  parse.rs  path_conventions.rs  resolve.rs
nix/: home-manager.nix  package.nix
scripts/: audit-code-citation-drift.py  benchmark-search-ranker.py  check-arch.py  release.py  simulate-eep48-extraction.exs  simulate-rustdoc-extraction.py  test-home-manager-module.sh
skills/anneal/: SKILL.md
src/: analysis.rs  area.rs  checks.rs  cli.rs  config.rs  explain.rs  extraction.rs  graph.rs  handle.rs  identity.rs  impact.rs  lattice.rs  lib.rs  main.rs  obligations.rs  parse.rs  query.rs  resolve.rs  snapshot.rs  style.rs  v2_adapter.rs
src/cli/: areas.rs  check.rs  diff.rs  find.rs  garden.rs  get.rs  impact.rs  init.rs  map.rs  mod.rs  obligations.rs  orient.rs  status.rs  summary.rs
src/output/: mod.rs  printer.rs  style.rs  tests.rs
tests/: help_agent.rs
tools/parity-runner/: Cargo.toml
tools/parity-runner/src/: main.rs
tools/spike-runner/: Cargo.toml
tools/spike-runner/fixtures/rustdoc-toy/: Cargo.toml  rustdoc_toy.json
tools/spike-runner/fixtures/rustdoc-toy/src/: lib.rs
tools/spike-runner/src/: capability.rs  dynamic_ir.rs  fixture.rs  lib.rs  loader.rs  program.rs  types.rs
tools/spike-runner/src/fixture/: mod.rs
tools/spike-runner/tests/: sp_nt1_compile_fail.rs
tools/spike-runner/tests/compile_fail/: sp_nt1_cyclic_negation.rs  sp_nt1_cyclic_negation.stderr
(+93 files in other folders)
