[package]
name = "anneal"
version = "0.14.0"
edition = "2024"
default-run = "anneal"
license = "MIT"
description = "Convergence assistant for knowledge corpora"

[workspace]
members = [
    "crates/anneal-legacy",
    "crates/anneal-lang",
    "crates/anneal-core",
    "crates/anneal-md",
    "crates/anneal-cli",
    "crates/anneal-mcp",
]
default-members = [
    ".",
    "crates/anneal-legacy",
    "crates/anneal-lang",
    "crates/anneal-core",
    "crates/anneal-md",
    "crates/anneal-cli",
    "crates/anneal-mcp",
]
exclude = [
    "tools/parity-runner",
    "tools/spike-runner",
]
resolver = "3"

[lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
elided_lifetimes_in_paths = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

# Restriction lints
dbg_macro = "deny"

# Pedantic allows — noisy or inapplicable
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
too_many_lines = "allow"
similar_names = "allow"
items_after_statements = "allow"
struct_excessive_bools = "allow"

[dependencies]
anneal-cli = { version = "0.14.0", path = "crates/anneal-cli" }
anneal-legacy = { version = "0.14.0", path = "crates/anneal-legacy" }

[profile.release]
lto = true
strip = true
