[package]
name = "anneal-code"
version = "0.21.4"
edition = "2024"
license = "MIT"
description = "Code source adapter for anneal"

[lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
elided_lifetimes_in_paths = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
dbg_macro = "deny"
redundant_clone = "deny"
use_self = "deny"
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
too_many_lines = "allow"
similar_names = "allow"
items_after_statements = "allow"
struct_excessive_bools = "allow"

[dependencies]
anneal-core = { version = "0.21.4", path = "../anneal-core" }
beam_file = "0.3.1"
camino = "1.2.2"
eetf = "0.12.0"
rustdoc-types = "0.57.3"
serde_json = "1.0.150"

[dev-dependencies]
tempfile = "3.27.0"
