[package]
name = "anneal-core"
version = "0.15.2"
edition = "2024"
license = "MIT"
description = "Substrate runtime types for anneal"

[lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
elided_lifetimes_in_paths = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
dbg_macro = "deny"
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
too_many_lines = "allow"
similar_names = "allow"
items_after_statements = "allow"
struct_excessive_bools = "allow"

[dependencies]
anneal-lang = { version = "0.15.2", path = "../anneal-lang" }
camino = { version = "1.2.2", features = ["serde1"] }
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
toml = "0.8"

[features]
default = []
scope-overlay = []
legacy-time-clone = []

[dev-dependencies]
tempfile = "3.27.0"
