[package]
name = "anneal-lang"
version = "0.16.0"
edition = "2024"
license = "MIT"
description = "Private syntax crate for anneal's Datalog dialect"
publish = false

[lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
elided_lifetimes_in_paths = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
dbg_macro = "deny"
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
too_many_lines = "allow"
similar_names = "allow"
items_after_statements = "allow"
struct_excessive_bools = "allow"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

[dev-dependencies]
serde_json = "1.0.149"
tempfile = "3.27.0"
