[package]
name = "anneal-md"
version = "0.17.0"
edition = "2024"
license = "MIT"
description = "Markdown source adapter for anneal"

[lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"
elided_lifetimes_in_paths = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
dbg_macro = "deny"
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
too_many_lines = "allow"
similar_names = "allow"
items_after_statements = "allow"
struct_excessive_bools = "allow"

[dependencies]
anneal-core = { path = "../anneal-core" }
camino = "1.2.2"
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock", "serde"] }
globset = "0.4.18"
pulldown-cmark = "0.13.3"
regex = "1.12.3"
serde_json = "1.0.149"
serde_yaml_ng = "0.10.0"
toml = "0.8.23"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"
