[package]
name = "parity-runner"
version = "0.1.0"
edition = "2024"
publish = false

[lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
anyhow = "1.0.102"
serde_json = "1.0.149"
