[package]
name = "spike-runner"
version = "0.1.0"
edition = "2024"
publish = false
description = "Engine spike for anneal v2.0 language redesign — runs MVS-1..9 against Datalog engine candidates"

[lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }

[dependencies]
ascent = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[[bin]]
name = "ascent_spike"
path = "src/bin/ascent_spike.rs"
