[package]
name = "spike-runner"
version = "0.1.0"
edition = "2024"
publish = false
description = "Engine spike for anneal v2.0 — runs MVS capability tests against Datalog engine candidates"

[lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# ascent-macro-generated code trips a few pedantic lints; allow at the
# fixture-and-binary level so the rules read clearly.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
similar_names = "allow"

[dependencies]
ascent = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
trybuild = "1"

[[bin]]
name = "ascent_spike"
path = "src/bin/ascent_spike.rs"

[[bin]]
name = "corpus_spike"
path = "src/bin/corpus_spike.rs"

[[bin]]
name = "dynamic_ir_bench"
path = "src/bin/dynamic_ir_bench.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true
strip = false
